change some word into french

--- a/main.tex
+++ b/main.tex
@@ -53,8 +53,8 @@
 \makecvtitle
 
 \section{Education}
-\cventry{2012--2015}{}{EPITA}{Kremlin-Bicêtre}%{\textit{Grade}}{Description}  % arguments 3 to 6 can be left empty
-\cventry{2010--2012}{DUT}{IUT de Vélizy}%{City}{\textit{Grade}}{Description}
+\cventry{2012--2015}{Diplôme d'ingénieur}{EPITA}{Kremlin-Bicêtre}{\textit{Grade}}{Majeur Système Réseau, Sécurité}
+\cventry{2010--2012}{DUT}{IUT de Vélizy}{Vélizy}%{\textit{Grade}}{Description}
 
 
 \section{Experience}
@@ -68,7 +68,7 @@
 \cvitemwithcomment{Français}{Native}{Comment}
 \cvitemwithcomment{Anglais}{Bilingue}{TOIEC: 975}
 
-\section{Computer skills}
+\section{Compétence}
 \cvdoubleitem{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
 \cvdoubleitem{category 2}{XXX, YYY, ZZZ}{category 5}{XXX, YYY, ZZZ}
 \cvdoubleitem{category 3}{XXX, YYY, ZZZ}{category 6}{XXX, YYY, ZZZ}
